--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,12 @@
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
+                    <a href="{{ url_for('deals') }}" class="text-gray-700 hover:text-primary">Deals</a>
                     {% if current_user.is_authenticated %}
-                        <a href="/deals" class="py-2 px-3 text-gray-700 hover:text-gray-900">Browse Deals</a>
-                        <a href="/create-deal" class="py-2 px-3 text-gray-700 hover:text-gray-900">Post Deal</a>
-                        <a href="/profile" class="py-2 px-3 text-gray-700 hover:text-gray-900">Profile</a>
-                        <a href="/logout" class="py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600">Logout</a>
+                        <a href="{{ url_for('messages') }}" class="text-gray-700 hover:text-primary">Messages</a>
+                        <a href="{{ url_for('create_deal') }}" class="text-gray-700 hover:text-primary">Post a Deal</a>
+                        <a href="{{ url_for('profile') }}" class="text-gray-700 hover:text-primary">Profile</a>
+                        <a href="{{ url_for('logout') }}" class="text-gray-700 hover:text-primary">Logout</a>
                     {% else %}
                         <a href="/login" class="py-2 px-4 bg-primary text-white rounded hover:bg-blue-700">Login</a>
                         <a href="/register" class="py-2 px-4 bg-gray-200 text-gray-800 rounded hover:bg-gray-300">Register</a>
